finally running kafka-console-producer

--- a/deploy-cfk/producer.properties
+++ b/deploy-cfk/producer.properties
@@ -1,7 +1,7 @@
 security.protocol=SSL
-ssl.keystore.type=PEM
-ssl.keystore.location=confluent
-ssl.key.password=client-key.pem
-ssl.truststore.type=PEM
-ssl.truststore.location=client-truststore.pem
+ssl.keystore.location=keystore.p12
+ssl.keystore.password=mystorepassword
+ssl.key.password=mystorepassword
+ssl.truststore.location=kafka.client.truststore.jks
+ssl.truststore.password=confluent
 
