--- a/deploy-cfk/producer.properties
+++ b/deploy-cfk/producer.properties
@@ -1,7 +1,7 @@
 security.protocol=SSL
-ssl.keystore.location=keystore.p12
+ssl.keystore.location=kafka-server-keystore.p12
 ssl.keystore.password=mystorepassword
 ssl.key.password=mystorepassword
-ssl.truststore.location=kafka.client.truststore.jks
-ssl.truststore.password=confluent
+ssl.truststore.location=kafka-server-keystore.p12
+ssl.truststore.password=mystorepassword
 
